@@ -73,6 +73,8 @@
 #define SETTINGS_DISPLAY_VIDEOTEXT_DEFAULT          (VIDTEXT_SHOW_NICKNAME | VIDTEXT_POSITION_BOTTOMRIGHT)
 #define SETTINGS_DISPLAY_VIDEOTEXT_SHOW             "display/videotext-pane-show"
 #define SETTINGS_DISPLAY_TRAYMINIMIZE               "display/trayminimize"
+#define SETTINGS_DISPLAY_CONFIRMEXIT               "display/confirm-exit"
+#define SETTINGS_DISPLAY_CONFIRMEXIT_DEFAULT               false
 #define SETTINGS_DISPLAY_ALWAYSONTOP                "display/alwaysontop"
 #define SETTINGS_DISPLAY_VU_METER_UPDATES           "display/vumeter-updates"
 #define SETTINGS_DISPLAY_VU_METER_UPDATES_DEFAULT   true
